chore(notebook): revisions

--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -350,10 +350,12 @@
     "  - dataset with forward returns as absolute changes\n",
     "  - dataset with only timestamps and headlines\n",
     "  - dataset with only timestamps, headlines, and articles\n",
+    "  - dataset with only intra-day news (original usd-brl file), and all day news (universal dataset, the current one)\n",
     "  - load in original datasets\n",
     "  - choose prediction horizon by choice of minutes (eg. t+1, t+5, t+15, etc.)\n",
     "  - map forward returns +1, -1 for decrease to measure directional accuracy\n",
     "  - map forward returns +1, -1, 0 for thresholded returns to measure directional accuracy\n",
+    "- Notes: This should basically allows the beta tester to customize the data they want to experiment with\n",
     "\n",
     "I will develop functionality that will prepare a single experimental dataset:\n",
     "  - remove all rows following the last timestamp in the interim/brl-corpus-2.csv at 2024-12-30 17:32:00\n",
