refactor(notebooks): update experiments for latest data and metrics

--- a/experiments/eda.ipynb
+++ b/experiments/eda.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f8d66539",
    "metadata": {},
    "outputs": [
@@ -208,8 +208,8 @@
    ],
    "source": [
     "# load data\n",
-    "news_df = pd.read_csv('../data/processed/bdm-corpus-2.csv')\n",
-    "fx_df = pd.read_csv('../data/processed/usd-brl.csv')\n",
+    "news_df = pd.read_csv('../data/interim/bdm-corpus-2/stage-0.csv')\n",
+    "fx_df = pd.read_csv('../data/interim/usd-brl.csv')\n",
     "\n",
     "# preview\n",
     "print('News dataset:')\n",
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "981d3ad0",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/processed/exp001.csv\")\n",
+    "df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-1.csv\")\n",
     "\n",
     "# relevant columns\n",
     "forward_return_columns = [f\"Forward Return t+{i}\" for i in range(1, 21)]\n",
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "53a7722b",
    "metadata": {},
    "outputs": [
@@ -704,17 +704,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Direction\n",
-      "Increase    1783\n",
-      "Decrease    1682\n",
+      "Direção\n",
+      "Aumento       1783\n",
+      "Diminuição    1682\n",
       "Name: count, dtype: int64\n",
       "Total: 3465\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/processed/exp002.csv\")\n",
-    "counts = df[\"Direction\"].value_counts()\n",
+    "df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-2.csv\")\n",
+    "counts = df[\"Direção\"].value_counts()\n",
     "print(counts)\n",
     "print(f\"Total: {counts.sum()}\")"
    ]
