--- a/experiments/exp001/exp001.ipynb
+++ b/experiments/exp001/exp001.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "local_path = \"../../checkpoints/exp001\"\n",
     "\n",
-    "df = pd.read_csv(\"../../data/processed/exp001.csv\")  # Now we can use paths relative to project root\n",
+    "df = pd.read_csv(\"\") \n",
     "\n",
     "model = BertForSequenceClassification.from_pretrained(local_path)\n",
     "tokenizer = AutoTokenizer.from_pretrained(local_path)"
