--- a/experiments/preprocess.ipynb
+++ b/experiments/preprocess.ipynb
@@ -5,27 +5,21 @@
    "id": "3fd9e6f2",
    "metadata": {},
    "source": [
-    "### Preprocessing"
+    "## Initial Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f6d32c47",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
+    "import unicodedata\n",
     "from dateutil import parser"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4320e67b",
-   "metadata": {},
-   "source": [
-    "## News Data Preprocessing"
    ]
   },
   {
@@ -33,6 +27,8 @@
    "id": "42ad4d94",
    "metadata": {},
    "source": [
+    "BDM Corpus 2\n",
+    "\n",
     "Bom Dia Mercado (BDM) → xlsx file with BDM articles and more → preprocessing to CSV → export to repository → final dataset"
    ]
   },
@@ -82,7 +78,7 @@
     "}, inplace=True)\n",
     "\n",
     "# save\n",
-    "news_df.to_csv(\"../data/interim/bdm-corpus-2.csv\", index=False, encoding='utf-8-sig')"
+    "news_df.to_csv(\"../data/interim/bdm-corpus-2/stage-0.csv\", index=False, encoding='utf-8-sig')"
    ]
   },
   {
@@ -95,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "830aa006",
    "metadata": {},
    "outputs": [
@@ -195,7 +191,7 @@
     }
    ],
    "source": [
-    "news_df = pd.read_csv(\"../data/interim/bdm-corpus-2.csv\", encoding='utf-8-sig') # reload as csv to ensure correct encoding\n",
+    "news_df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-0.csv\", encoding='utf-8-sig') # reload as csv to ensure correct encoding\n",
     "\n",
     "invalid_rows = news_df[news_df['Headline'].isna()]\n",
     "print(f\"{len(invalid_rows)} invalid rows found in 'Headline' column.\")\n",
@@ -204,14 +200,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ed35e39e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# drop rows with invalid headlines and resave\n",
     "news_df = news_df.dropna(subset=['Headline'])\n",
-    "news_df.to_csv(\"../data/interim/bdm-corpus-2.csv\", index=False, encoding='utf-8-sig')"
+    "news_df.to_csv(\"../data/interim/bdm-corpus-2/stage-0.csv\", index=False, encoding='utf-8-sig')"
    ]
   },
   {
@@ -259,13 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3083ec9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load new datasets\n",
-    "bdm_df = pd.read_csv(\"../data/interim/bdm-corpus-2.csv\", parse_dates=['Timestamp'])\n",
+    "bdm_df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-0.csv\", parse_dates=['Timestamp'])\n",
     "fx_df = pd.read_csv(\"../data/interim/usd-brl.csv\", parse_dates=['Timestamp'])"
    ]
   },
@@ -331,7 +327,7 @@
    "id": "4a4e1bbb",
    "metadata": {},
    "source": [
-    "## exp001 Dataset"
+    "## Stage 1"
    ]
   },
   {
@@ -342,21 +338,19 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Dataset Creation Process for Experiment 1\n",
-    "  - remove all rows following the last timestamp in the interim/brl-corpus-2.csv at 2024-12-30 17:32:00\n",
-    "  - remove article and comments columns from interim/brl-corpus-2.csv\n",
-    "  - merge the USD/BRL values from interim/usd-brl-continuous.csv into interim/brl-corpus-2.csv by matching timestamps\n",
+    "  - remove all rows following the last timestamp in the interim/bdm-corpus-2/stage-0.csv at 2024-12-30 17:32:00\n",
+    "  - remove article and comments columns from interim/bdm-corpus-2/stage-0.csv\n",
+    "  - merge the USD/BRL values from interim/usd-brl-continuous.csv into interim/bdm-corpus-2/stage-0.csv by matching timestamps\n",
     "  - compute forward returns based on the prediction horizon t+1 to t+20 minutes\n",
     "    - positive returns will map to +1, negative returns will map to -1, and no change will map to 0\n",
     "    - each computed forward return will be stored in a new column named \"Forward Return t+X\" where X is the number of minutes ahead\n",
     "  - the function will return a new DataFrame with the merged data and forward returns\n",
-    "  - save the new DataFrame to a CSV file named \"exp001.csv\"\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3a04b248",
    "metadata": {},
    "outputs": [
@@ -374,7 +368,7 @@
     "\n",
     "# Load datasets\n",
     "fx_df = pd.read_csv(\"../data/interim/usd-brl-continuous.csv\", parse_dates=[\"Timestamp\"])\n",
-    "news_df = pd.read_csv(\"../data/interim/bdm-corpus-2.csv\", parse_dates=[\"Timestamp\"])\n",
+    "news_df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-0.csv\", parse_dates=[\"Timestamp\"])\n",
     "\n",
     "# Restrict news to timestamps before cutoff\n",
     "last_timestamp = pd.to_datetime(\"2024-12-30 17:32:00\")\n",
@@ -400,8 +394,8 @@
     "# Report row count\n",
     "print(f\"Number of rows in merged dataset: {len(merged_df)}\")\n",
     "\n",
-    "# Save processed dataset\n",
-    "merged_df.to_csv(\"../data/processed/exp001.csv\", index=False, encoding=\"utf-8-sig\")"
+    "# Save as stage-1 dataset\n",
+    "merged_df.to_csv(\"../data/interim/bdm-corpus-2/stage-1.csv\", index=False, encoding=\"utf-8-sig\")"
    ]
   },
   {
@@ -409,21 +403,20 @@
    "id": "81f95d0f",
    "metadata": {},
    "source": [
-    "## exp002"
+    "## Stage 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "479409dd",
+   "id": "35a1f5e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
-    "Experiment 2 Dataset Creation Process:\n",
-    "- remove all t+X forward returns EXCEPT t+5\n",
-    "    - t+5 minutes showed the most promising results, as t+4...t+20 showed less bias towards no change (impact takes some minutes)\n",
+    "Stage 2 Dataset Creation Process:\n",
     "- rename t+5 forward return to ground truth\n",
+    "- remove all t+X forward returns EXCEPT t+5\n",
     "- remove usd/brl column, as it's not needed for this since the ground truth delta is already calculated\n",
     "\n",
     "Intraday Trading Sessions: Remove all rows with headlines released outside of market hours (mostly weekends in our data)\n",
@@ -432,18 +425,17 @@
     "    - For news at end of trading day, the price change is determined by the last trading price (not always t+5), very few instances of this\n",
     "    - 54 headlines (rows) were removed as they were either neutral or took place on weekends\n",
     "    - I'd rather keep this a binary classification task and let the \"hold\" be determined by the trader based on profits or num of trades\n",
-    "\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "809eacdf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/processed/exp001.csv\", parse_dates=['Timestamp'])\n",
+    "df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-1.csv\", parse_dates=['Timestamp'])\n",
     "prices = pd.read_csv(\"../data/interim/usd-brl.csv\", parse_dates=['Timestamp'])"
    ]
   },
@@ -454,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Filter by trading days only ---\n",
+    "# --- Filter by TRADING DAYS only ---\n",
     "valid_dates = set(prices[\"Timestamp\"].dt.date.unique())\n",
     "\n",
     "def is_trading_day(ts):\n",
@@ -465,7 +457,7 @@
     "# --- Drop USD/BRL column if it exists ---\n",
     "df.drop(columns=[\"USD/BRL\"], errors=\"ignore\", inplace=True)\n",
     "\n",
-    "# --- Extract and rename the t+5 forward return column ---\n",
+    "# --- Extract and rename t+5 forward return column ---\n",
     "t5_col = [col for col in df.columns if \"t+5\" in col and \"forward return\" in col.lower()]\n",
     "if t5_col:\n",
     "    df = df[[\"Timestamp\", \"Headline\", t5_col[0]]]\n",
@@ -480,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c7b9642b",
    "metadata": {},
    "outputs": [],
@@ -497,7 +489,135 @@
     "    \"Decrease\": \"Diminuição\"\n",
     "})\n",
     "\n",
-    "df.to_csv(\"../data/processed/exp002.csv\", index=False, encoding=\"utf-8-sig\")"
+    "df.to_csv(\"../data/interim/bdm-corpus-2/stage-2.csv\", index=False, encoding=\"utf-8-sig\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "576a3a70",
+   "metadata": {},
+   "source": [
+    "## Stage 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77d9d287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "- LLaMA-3 preprocessing (keep text natural to preserve syntactic value)\n",
+    "- DO NOT remove stopwords\n",
+    "- DO NOT lemmatize or stem\n",
+    "- DO NOT lowercase\n",
+    "- DO NOT translate or normalize to English\n",
+    "- Preserve accents, diacritics, and original formatting\n",
+    "    \n",
+    "Reason: LLaMA-3 is a base model trained on diverse, natural language\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033e2994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"../data/interim/bdm-corpus-2/stage-2.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a17544fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Define robust headline cleaner ===\n",
+    "def clean_headline(text: str) -> str:\n",
+    "    text = str(text).strip()\n",
+    "\n",
+    "    # Normalize smart quotes and apostrophes\n",
+    "    text = re.sub(r\"[“”]\", '\"', text)\n",
+    "    text = re.sub(r\"[‘’]\", \"'\", text)\n",
+    "\n",
+    "    # Remove repeated quotes/apostrophes\n",
+    "    text = re.sub(r'\"{2,}', '\"', text)\n",
+    "    text = re.sub(r\"'{2,}\", \"'\", text)\n",
+    "\n",
+    "    # Remove leading/trailing quotes (even if multiple)\n",
+    "    text = re.sub(r'^([\"\\']+)', '', text)\n",
+    "    text = re.sub(r'([\"\\']+)$', '', text)\n",
+    "\n",
+    "    # Remove noisy special character sequences\n",
+    "    text = re.sub(r\"[_•√×+÷=<>^~|#*@¬]{2,}\", \" \", text)\n",
+    "    text = re.sub(r\"[_•√×+÷=<>^~|#*@¬]\", \"\", text)\n",
+    "\n",
+    "    # Normalize unicode\n",
+    "    text = unicodedata.normalize(\"NFKC\", text)\n",
+    "\n",
+    "    # Remove non-printable/unusual characters except Latin-1\n",
+    "    text = re.sub(r\"[^\\x20-\\x7EÀ-ÿ°€¢£¥‰–—…]\", \" \", text)\n",
+    "\n",
+    "    # Normalize whitespace\n",
+    "    text = re.sub(r\"\\s+\", \" \", text)\n",
+    "\n",
+    "    return text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8be5731a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Manchete\"] = df[\"Manchete\"].apply(clean_headline)\n",
+    "df.to_csv(\"../data/processed/bdm-corpus-2/stage-3/data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3fadafb",
+   "metadata": {},
+   "source": [
+    "### Create train/test sets out of Stage 3 data.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b1bd88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"../data/processed/bdm-corpus-2/stage-3/data.csv\")  # Adjust path if needed\n",
+    "\n",
+    "# Filter by 'Direção'\n",
+    "aumento = df[df[\"Direção\"] == \"Aumento\"]\n",
+    "diminuicao = df[df[\"Direção\"] == \"Diminuição\"]\n",
+    "\n",
+    "# Sample 100 rows from each category\n",
+    "sample_aumento = aumento.sample(n=200, random_state=42) # reproducible with seed set, same set generated every time\n",
+    "sample_diminuicao = diminuicao.sample(n=200, random_state=42) # same as above\n",
+    "\n",
+    "# Combine and shuffle the test set\n",
+    "test_df = pd.concat([sample_aumento, sample_diminuicao])\n",
+    "test_df = test_df.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "# Remove test samples from the original DataFrame\n",
+    "to_remove_indices = sample_aumento.index.union(sample_diminuicao.index)\n",
+    "train_df = df.drop(index=to_remove_indices).reset_index(drop=True)\n",
+    "\n",
+    "# Save to new CSVs\n",
+    "test_df.to_csv(\"../data/processed/bdm-corpus-2/stage-3/test.csv\", index=False)\n",
+    "train_df.to_csv(\"../data/processed/bdm-corpus-2/stage-3/train.csv\", index=False)"
    ]
   }
  ],
