--- a/experiments/exp002/exp002.ipynb
+++ b/experiments/exp002/exp002.ipynb
@@ -22,46 +22,59 @@
    "source": [
     "# === Config ===\n",
     "MODEL = \"model-1\"\n",
-    "INPUT_FILE = \"../../data/processed/exp002.csv\"\n",
-    "EVAL_FILE = \"eval.csv\"\n",
+    "EVAL_FILE = \"../../data/processed/bdm-corpus-2/stage-3/test.csv\"\n",
     "RESULT_FILE = \"../../results/exp002/results.csv\"\n",
-    "TEMPERATURE = 0.0\n",
-    "N_PER_CLASS = 50"
+    "TEMPERATURE = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "78293f3c",
+   "execution_count": 3,
+   "id": "a83c4900",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 1: Prepare eval dataset (balanced) ===\n",
-    "df = pd.read_csv(INPUT_FILE).dropna(subset=[\"Manchete\"])\n",
-    "df_up = df[df[\"Direção\"] == \"Aumento\"].sample(n=N_PER_CLASS, random_state=42)\n",
-    "df_down = df[df[\"Direção\"] == \"Diminuição\"].sample(n=N_PER_CLASS, random_state=42)\n",
-    "eval_df = pd.concat([df_up, df_down]).sample(frac=1.0, random_state=42).reset_index(drop=True)\n",
-    "eval_df.to_csv(EVAL_FILE, index=False)"
+    "eval_df = pd.read_csv(EVAL_FILE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "b28bde98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(eval_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "ca6227ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 2: Prompt generator ===\n",
-    "def build_prompt(headline, timestamp):\n",
-    "    return f\"\"\"Manchete: {headline}\n",
-    "DataHora: {timestamp}\n",
-    "\n",
-    "Responda apenas com uma palavra: Aumento ou Diminuição.\"\"\""
+    "def build_prompt(headline: str) -> str:\n",
+    "    return (\n",
+    "        f\"{headline.strip()}\\n\\n\"\n",
+    "        f\"Preveja o impacto direcional na taxa de câmbio USD/BRL com uma única palavra: Aumento ou Diminuição.\"\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "010579f2",
    "metadata": {},
    "outputs": [],
@@ -80,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "672e89e0",
    "metadata": {},
    "outputs": [],
@@ -88,7 +101,7 @@
     "# === Step 4: Run prediction loop ===\n",
     "predictions = []\n",
     "for i, row in eval_df.iterrows():\n",
-    "    prompt = build_prompt(row[\"Manchete\"], row[\"DataHora\"])\n",
+    "    prompt = build_prompt(row[\"Manchete\"])\n",
     "    try:\n",
     "        out = query_ollama(MODEL, prompt)\n",
     "    except Exception as e:\n",
@@ -99,10 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8edc6224",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved predictions to ../../results/exp002/results.csv\n"
+     ]
+    }
+   ],
    "source": [
     "eval_df[\"Previsão\"] = predictions\n",
     "eval_df.to_csv(RESULT_FILE, index=False)\n",
@@ -111,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "62d52a2c",
    "metadata": {},
    "outputs": [
@@ -124,12 +145,12 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     Aumento      0.446     0.580     0.504        50\n",
-      "  Diminuição      0.424     0.280     0.337        50\n",
+      "     Aumento      0.539     0.205     0.297       200\n",
+      "  Diminuição      0.511     0.825     0.631       200\n",
       "\n",
-      "   micro avg      0.439     0.430     0.434       100\n",
-      "   macro avg      0.435     0.430     0.421       100\n",
-      "weighted avg      0.435     0.430     0.421       100\n",
+      "   micro avg      0.516     0.515     0.516       400\n",
+      "   macro avg      0.525     0.515     0.464       400\n",
+      "weighted avg      0.525     0.515     0.464       400\n",
       "\n"
      ]
     }
@@ -158,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "28c55910",
    "metadata": {},
    "outputs": [
@@ -166,8 +187,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[29 19]\n",
-      " [36 14]]\n"
+      "[[ 41 158]\n",
+      " [ 35 165]]\n"
      ]
     }
    ],
