--- a/experiments/exp003/exp003.ipynb
+++ b/experiments/exp003/exp003.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "294d650b",
    "metadata": {},
    "outputs": [],
@@ -15,18 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "33d23166",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Config ===\n",
     "MODEL = \"model-1\"\n",
-    "INPUT_FILE = \"../../data/processed/exp003.csv\"\n",
-    "EVAL_FILE = \"eval.csv\"\n",
+    "EVAL_FILE = \"../../data/processed/bdm-corpus-2/stage-3/test.csv\"\n",
+    "TRAIN_FILE = \"../../data/processed/bdm-corpus-2/stage-3/train.csv\" # grab 6 examples for few shot\n",
     "RESULT_FILE = \"../../results/exp003/results.csv\"\n",
-    "TEMPERATURE = 0.0\n",
-    "N_PER_CLASS = 50"
+    "TEMPERATURE = 0.0"
    ]
   },
   {
@@ -36,8 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 1: Load data ===\n",
-    "df = pd.read_csv(INPUT_FILE).dropna(subset=[\"Manchete\"])"
+    "eval_df = pd.read_csv(EVAL_FILE)\n",
+    "shot_df = pd.read_csv(TRAIN_FILE)"
    ]
   },
   {
@@ -45,51 +44,121 @@
    "execution_count": null,
    "id": "3623a97f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DataHora</th>\n",
+       "      <th>Manchete</th>\n",
+       "      <th>Direção</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2553</th>\n",
+       "      <td>2024-12-19 14:32:00</td>\n",
+       "      <td>Itaú BBA reforça recomendação de compra para I...</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1357</th>\n",
+       "      <td>2024-12-06 17:00:00</td>\n",
+       "      <td>MERCADOS: Petróleo recua após decisão da Opep ...</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1221</th>\n",
+       "      <td>2024-12-05 16:11:00</td>\n",
+       "      <td>Nomeação de novo primeiro-ministro ocorrerá no...</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>383</th>\n",
+       "      <td>2024-11-27 15:22:00</td>\n",
+       "      <td>Isenção do IR até R$ 5 mil teria efeito fiscal...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>744</th>\n",
+       "      <td>2024-12-02 11:17:00</td>\n",
+       "      <td>Emendas de relator, por exemplo, podem ser ret...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>2024-11-25 16:51:00</td>\n",
+       "      <td>WTI para janeiro recua 3,23%, a US$ 68,94 por ...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DataHora                                           Manchete  \\\n",
+       "2553  2024-12-19 14:32:00  Itaú BBA reforça recomendação de compra para I...   \n",
+       "1357  2024-12-06 17:00:00  MERCADOS: Petróleo recua após decisão da Opep ...   \n",
+       "1221  2024-12-05 16:11:00  Nomeação de novo primeiro-ministro ocorrerá no...   \n",
+       "383   2024-11-27 15:22:00  Isenção do IR até R$ 5 mil teria efeito fiscal...   \n",
+       "744   2024-12-02 11:17:00  Emendas de relator, por exemplo, podem ser ret...   \n",
+       "179   2024-11-25 16:51:00  WTI para janeiro recua 3,23%, a US$ 68,94 por ...   \n",
+       "\n",
+       "         Direção  \n",
+       "2553     Aumento  \n",
+       "1357     Aumento  \n",
+       "1221     Aumento  \n",
+       "383   Diminuição  \n",
+       "744   Diminuição  \n",
+       "179   Diminuição  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# === Step 2: Sample few-shot examples (3) ===\n",
-    "fewshot_up = df[df[\"Direção\"] == \"Aumento\"].sample(n=2, random_state=1)\n",
-    "fewshot_down = df[df[\"Direção\"] == \"Diminuição\"].sample(n=1, random_state=1)\n",
+    "# Sample few-shot examples (6)\n",
+    "fewshot_up = shot_df[shot_df[\"Direção\"] == \"Aumento\"].sample(n=3, random_state=1) # prompts are reproducible with seed 1\n",
+    "fewshot_down = shot_df[shot_df[\"Direção\"] == \"Diminuição\"].sample(n=3, random_state=1)\n",
+    "fewshot_df = pd.concat([fewshot_up, fewshot_down])\n",
+    "\n",
+    "display(fewshot_df)\n",
+    "\n",
+    "# === Step 2: Sample few-shot examples (6) ===\n",
+    "fewshot_up = eval_df[eval_df[\"Direção\"] == \"Aumento\"].sample(n=3, random_state=1)\n",
+    "fewshot_down = eval_df[eval_df[\"Direção\"] == \"Diminuição\"].sample(n=3, random_state=1)\n",
     "fewshot_df = pd.concat([fewshot_up, fewshot_down])\n",
     "fewshot_indices = fewshot_df.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "49fa9f3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Step 3: Exclude few-shot examples from eval set ===\n",
-    "df_eval = df.drop(index=fewshot_indices)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cf73e68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# === Step 4: Sample balanced evaluation set ===\n",
-    "df_up = df_eval[df_eval[\"Direção\"] == \"Aumento\"].sample(n=N_PER_CLASS, random_state=42)\n",
-    "df_down = df_eval[df_eval[\"Direção\"] == \"Diminuição\"].sample(n=N_PER_CLASS, random_state=42)\n",
-    "eval_df = pd.concat([df_up, df_down]).sample(frac=1.0, random_state=42).reset_index(drop=True)\n",
-    "eval_df.to_csv(EVAL_FILE, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "74043b3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 5: Format few-shot block ===\n",
+    "# Format few-shot block\n",
     "def format_example(row):\n",
     "    return f\"\"\"Manchete: {row['Manchete']}\n",
-    "DataHora: {row['DataHora']}\n",
     "Resposta: {row['Direção']}\"\"\"\n",
     "\n",
     "FEWSHOT_BLOCK = \"\\n\\n\".join(format_example(row) for _, row in fewshot_df.iterrows())"
@@ -97,31 +166,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "72ff86eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 6: Build prompt for each headline ===\n",
-    "def build_fewshot_prompt(headline, timestamp):\n",
+    "# Build prompt for each headline\n",
+    "def build_fewshot_prompt(headline):\n",
     "    return f\"\"\"{FEWSHOT_BLOCK}\n",
     "\n",
-    "Agora classifique a seguinte manchete:\n",
+    "    Preveja o impacto de curto prazo no USD/BRL:\n",
     "\n",
-    "Manchete: {headline}\n",
-    "DataHora: {timestamp}\n",
+    "    Manchete: {headline}\n",
     "\n",
-    "Responda apenas com uma palavra: Aumento ou Diminuição.\"\"\""
+    "    Responda apenas com uma palavra: Aumento ou Diminuição.\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4b5eadcd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 7: Query Ollama ===\n",
+    "# Query Ollama\n",
     "def query_ollama(model, prompt):\n",
     "    res = requests.post(\"http://localhost:11434/api/chat\", json={\n",
     "        \"model\": model,\n",
@@ -135,15 +203,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f99bf9c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Step 8: Run inference ===\n",
+    "# Run inference\n",
     "predictions = []\n",
     "for i, row in eval_df.iterrows():\n",
-    "    prompt = build_fewshot_prompt(row[\"Manchete\"], row[\"DataHora\"])\n",
+    "    prompt = build_fewshot_prompt(row[\"Manchete\"])\n",
     "    try:\n",
     "        out = query_ollama(MODEL, prompt)\n",
     "    except Exception:\n",
@@ -154,10 +222,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "556ab6c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Saved predictions to ../../results/exp003/results.csv\n"
+     ]
+    }
+   ],
    "source": [
     "eval_df[\"Previsão\"] = predictions\n",
     "eval_df.to_csv(RESULT_FILE, index=False)\n",
@@ -166,23 +242,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d1316262",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     Aumento      0.508     0.910     0.652       200\n",
+      "  Diminuição      0.571     0.120     0.198       200\n",
+      "\n",
+      "    accuracy                          0.515       400\n",
+      "   macro avg      0.540     0.515     0.425       400\n",
+      "weighted avg      0.540     0.515     0.425       400\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
     "# Reload the results file\n",
-    "df = pd.read_csv(\"results.csv\")\n",
+    "preds = pd.read_csv(\"../../results/exp003/results.csv\")\n",
     "\n",
     "# Normalize predictions (just in case)\n",
-    "df[\"Previsão\"] = df[\"Previsão\"].str.strip().str.capitalize()\n",
-    "df[\"Direção\"] = df[\"Direção\"].str.strip().str.capitalize()\n",
+    "preds[\"Previsão\"] = preds[\"Previsão\"].str.strip().str.capitalize()\n",
+    "preds[\"Direção\"] = preds[\"Direção\"].str.strip().str.capitalize()\n",
     "\n",
     "# Report\n",
     "report = classification_report(\n",
-    "    df[\"Direção\"], df[\"Previsão\"],\n",
+    "    preds[\"Direção\"], preds[\"Previsão\"],\n",
     "    labels=[\"Aumento\", \"Diminuição\"],\n",
     "    target_names=[\"Aumento\", \"Diminuição\"],\n",
     "    digits=3\n",
@@ -191,11 +286,50 @@
     "print(\"\\nClassification Report:\\n\")\n",
     "print(report)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7593f399",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[182  18]\n",
+      " [176  24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "'''\n",
+    "[[TP FN]\n",
+    " [FP TN]]\n",
+    "'''\n",
+    "cm = confusion_matrix(df[\"Direção\"], df[\"Previsão\"], labels=[\"Aumento\", \"Diminuição\"])\n",
+    "print(cm)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv_temp",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
