chore(notebooks): update EDA and preprocessing notebooks

--- a/experiments/eda.ipynb
+++ b/experiments/eda.ipynb
@@ -718,6 +718,118 @@
     "print(counts)\n",
     "print(f\"Total: {counts.sum()}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c374f5",
+   "metadata": {},
+   "source": [
+    "## Check for Data Leakage in Stage 3 Datasets used on exp004 during fine-tuning and inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19b83181",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of overlapping rows: 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DataHora</th>\n",
+       "      <th>Manchete</th>\n",
+       "      <th>Direção_x</th>\n",
+       "      <th>Direção_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-11-26 10:02:00</td>\n",
+       "      <td>Reação ao IPCA-15</td>\n",
+       "      <td>Aumento</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-12-06 12:54:00</td>\n",
+       "      <td>Fed/Goolsbee: Inflação cai, mas se estabilizar...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>Com essa fórmula de cálculo, a suposta renúnci...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              DataHora                                           Manchete  \\\n",
+       "0  2024-11-26 10:02:00                                  Reação ao IPCA-15   \n",
+       "1  2024-12-06 12:54:00  Fed/Goolsbee: Inflação cai, mas se estabilizar...   \n",
+       "2  2024-11-28 09:02:00  Com essa fórmula de cálculo, a suposta renúnci...   \n",
+       "\n",
+       "    Direção_x   Direção_y  \n",
+       "0     Aumento     Aumento  \n",
+       "1  Diminuição  Diminuição  \n",
+       "2  Diminuição  Diminuição  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "test_df = pd.read_csv(\"../../data/processed/bdm-corpus-2/stage-3/test.csv\")\n",
+    "train_df = pd.read_csv(\"../../data/processed/bdm-corpus-2/stage-3/train.csv\")\n",
+    "\n",
+    "# Find matching rows based on both columns\n",
+    "matching_rows = pd.merge(test_df, train_df, on=[\"DataHora\", \"Manchete\"], how=\"inner\")\n",
+    "\n",
+    "# Print number of matches\n",
+    "print(f\"Number of overlapping rows: {len(matching_rows)}\")\n",
+    "display(matching_rows[\"DataHora\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ea0fa8a",
+   "metadata": {},
+   "source": [
+    "## Stage 4"
+   ]
   }
  ],
  "metadata": {
