--- a/experiments/preprocess.ipynb
+++ b/experiments/preprocess.ipynb
@@ -619,6 +619,277 @@
     "test_df.to_csv(\"../data/processed/bdm-corpus-2/stage-3/test.csv\", index=False)\n",
     "train_df.to_csv(\"../data/processed/bdm-corpus-2/stage-3/train.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e3d9a1a",
+   "metadata": {},
+   "source": [
+    "## Stage 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eb95480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Clean Stage 3:\n",
+    "- remove duplicate rows (eg., row_a timestamp/headline == row_b timestamp/headline)\n",
+    "    - this subset is used because there's several headlines for certain timestamps, so we gotta refine it further\n",
+    "- chronologically create train/test set for temporal evaluation\n",
+    "- keep test set slightly imbalanced, as it already is, to mimic real world scenario\n",
+    "- 16 duplicates (8 rempoved: 3465 headlines -> 3457 headlines)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1a42659c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows before removing duplicates: 3465\n",
+      "Duplicate rows:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DataHora</th>\n",
+       "      <th>Manchete</th>\n",
+       "      <th>Direção</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>2024-11-26 10:02:00</td>\n",
+       "      <td>Reação ao IPCA-15</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>2024-11-26 10:02:00</td>\n",
+       "      <td>Reação ao IPCA-15</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>AOVIVO/Haddad sobre IR: Nosso objetivo é que e...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>Ela irá beneficiar todo mundo que ganha até 5 ...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>Com essa fórmula de cálculo, a suposta renúnci...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>482</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>AOVIVO/Haddad sobre IR: Nosso objetivo é que e...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>483</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>Ela irá beneficiar todo mundo que ganha até 5 ...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>484</th>\n",
+       "      <td>2024-11-28 09:02:00</td>\n",
+       "      <td>Com essa fórmula de cálculo, a suposta renúnci...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>588</th>\n",
+       "      <td>2024-11-28 11:54:00</td>\n",
+       "      <td>MERCADOS: Sob pressão do fiscal, Ibovespa amea...</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>589</th>\n",
+       "      <td>2024-11-28 11:54:00</td>\n",
+       "      <td>MERCADOS: Sob pressão do fiscal, Ibovespa amea...</td>\n",
+       "      <td>Aumento</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>842</th>\n",
+       "      <td>2024-12-02 10:56:00</td>\n",
+       "      <td>AOVIVO/Galípolo diz que a questão da meta é pá...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>843</th>\n",
+       "      <td>2024-12-02 10:56:00</td>\n",
+       "      <td>AOVIVO/Galípolo diz que a questão da meta é pá...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1424</th>\n",
+       "      <td>2024-12-06 09:22:00</td>\n",
+       "      <td>MERCADOS: dolar e juros sobem com fiscal no ra...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1425</th>\n",
+       "      <td>2024-12-06 09:22:00</td>\n",
+       "      <td>MERCADOS: dolar e juros sobem com fiscal no ra...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1500</th>\n",
+       "      <td>2024-12-06 12:54:00</td>\n",
+       "      <td>Fed/Goolsbee: Inflação cai, mas se estabilizar...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1501</th>\n",
+       "      <td>2024-12-06 12:54:00</td>\n",
+       "      <td>Fed/Goolsbee: Inflação cai, mas se estabilizar...</td>\n",
+       "      <td>Diminuição</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 DataHora                                           Manchete  \\\n",
+       "233   2024-11-26 10:02:00                                  Reação ao IPCA-15   \n",
+       "236   2024-11-26 10:02:00                                  Reação ao IPCA-15   \n",
+       "477   2024-11-28 09:02:00  AOVIVO/Haddad sobre IR: Nosso objetivo é que e...   \n",
+       "478   2024-11-28 09:02:00  Ela irá beneficiar todo mundo que ganha até 5 ...   \n",
+       "479   2024-11-28 09:02:00  Com essa fórmula de cálculo, a suposta renúnci...   \n",
+       "482   2024-11-28 09:02:00  AOVIVO/Haddad sobre IR: Nosso objetivo é que e...   \n",
+       "483   2024-11-28 09:02:00  Ela irá beneficiar todo mundo que ganha até 5 ...   \n",
+       "484   2024-11-28 09:02:00  Com essa fórmula de cálculo, a suposta renúnci...   \n",
+       "588   2024-11-28 11:54:00  MERCADOS: Sob pressão do fiscal, Ibovespa amea...   \n",
+       "589   2024-11-28 11:54:00  MERCADOS: Sob pressão do fiscal, Ibovespa amea...   \n",
+       "842   2024-12-02 10:56:00  AOVIVO/Galípolo diz que a questão da meta é pá...   \n",
+       "843   2024-12-02 10:56:00  AOVIVO/Galípolo diz que a questão da meta é pá...   \n",
+       "1424  2024-12-06 09:22:00  MERCADOS: dolar e juros sobem com fiscal no ra...   \n",
+       "1425  2024-12-06 09:22:00  MERCADOS: dolar e juros sobem com fiscal no ra...   \n",
+       "1500  2024-12-06 12:54:00  Fed/Goolsbee: Inflação cai, mas se estabilizar...   \n",
+       "1501  2024-12-06 12:54:00  Fed/Goolsbee: Inflação cai, mas se estabilizar...   \n",
+       "\n",
+       "         Direção  \n",
+       "233      Aumento  \n",
+       "236      Aumento  \n",
+       "477   Diminuição  \n",
+       "478   Diminuição  \n",
+       "479   Diminuição  \n",
+       "482   Diminuição  \n",
+       "483   Diminuição  \n",
+       "484   Diminuição  \n",
+       "588      Aumento  \n",
+       "589      Aumento  \n",
+       "842   Diminuição  \n",
+       "843   Diminuição  \n",
+       "1424  Diminuição  \n",
+       "1425  Diminuição  \n",
+       "1500  Diminuição  \n",
+       "1501  Diminuição  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"../data/processed/bdm-corpus-2/stage-3/data.csv\")\n",
+    "print(f\"Total rows before removing duplicates: {len(df)}\")\n",
+    "\n",
+    "duplicates = df[df.duplicated(subset=[\"DataHora\", \"Manchete\"], keep=False)]\n",
+    "print(\"Duplicate rows:\")\n",
+    "display(duplicates)\n",
+    "\n",
+    "df = df.drop_duplicates(subset=[\"DataHora\", \"Manchete\"], keep=\"first\")\n",
+    "\n",
+    "train = df.iloc[:-400]\n",
+    "test = df.iloc[-400:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d730e16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total rows after removing duplicates: 3457\n",
+      "\n",
+      "Train label counts:\n",
+      "Direção\n",
+      "Aumento       1554\n",
+      "Diminuição    1503\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Test label counts:\n",
+      "Direção\n",
+      "Aumento       227\n",
+      "Diminuição    173\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nTotal rows after removing duplicates: {len(df)}\")\n",
+    "print(\"\\nTrain label counts:\")\n",
+    "print(train[\"Direção\"].value_counts())\n",
+    "print(\"\\nTest label counts:\")\n",
+    "print(test[\"Direção\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5239a9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/processed/bdm-corpus-2/stage-4/data.csv\")\n",
+    "train.to_csv(\"../data/processed/bdm-corpus-2/stage-4/train.csv\", index=False)\n",
+    "test.to_csv(\"../data/processed/bdm-corpus-2/stage-4/test.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
